<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="entries">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
    </string-array>
</resources>